--- a/src/components/CharacterEditor/CharacterEditor.module.css
+++ b/src/components/CharacterEditor/CharacterEditor.module.css
@@ -8,6 +8,13 @@
 
 .header {
   padding-bottom: 64px;
+  width: 65%;
+}
+
+@media (max-width: 500px) {
+  .header {
+    display: none;
+  }
 }
 
 .title {
@@ -27,4 +34,22 @@
 }
 
 .controlColumn {
+  width: 50%;
+}
+
+@media (max-width: 500px) {
+  .controlColumn {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    
+    flex-direction: row;
+    overflow-x: auto;
+  }
+
+  .characterEditor {
+    position: fixed;
+    bottom: 0;
+    padding: 32px;
+  }
 }
